<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/str"
    tools:context=".SendDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_a_complaint"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/captureImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:padding="20dp"
            android:src="@drawable/upload_image"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_With_Col"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/hsn_code"/>

            <EditText
                android:id="@+id/hsnCode"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:hint="@string/enter_hsn_code_if_possible"
                android:background="@drawable/edittext_shape"
                android:padding="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/address"/>

            <EditText
                android:id="@+id/address"
                android:layout_weight="2.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:hint="@string/mention_any_landmark_near_street_light"
                android:background="@drawable/edittext_shape"
                android:padding="10dp"/>
        </LinearLayout>


        <Button
            android:id="@+id/complaint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complaint"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="18dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>


    </LinearLayout>


</ScrollView>