<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".authentication.OtpSignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical">
        <TextView
            android:id="@+id/blackBlock"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:background="@drawable/str"
            android:text="@string/appname_hindi"
            android:textColor="@color/white"
            android:textSize="80sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:orientation="vertical"
            android:background="@drawable/register_shape">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:padding="16dp"
                android:textSize="40sp"
                />


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:maxLines="1"
                android:textAlignment="center"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:textSize="16sp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/edittext_shape"/>


            <LinearLayout
                android:id="@+id/ll"
                android:layout_marginTop="25dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nintyOne"
                    android:background="@drawable/edittext_shape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_91"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    app:drawableLeftCompat="@drawable/india"/>

                <EditText
                    android:id="@+id/phoneNumberEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:drawableStart="@drawable/ic_baseline_phone_android_24"
                    android:textSize="16sp"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:background="@drawable/edittext_shape"
                    android:hint="@string/number"/>

            </LinearLayout>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/set_password"
                android:textAlignment="center"
                android:padding="10dp"
                android:maxLength="8"
                android:maxLines="1"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:textSize="16sp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/edittext_shape"/>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/gender" />

                <RadioGroup
                    android:layout_gravity="start"
                    android:id="@+id/radioAge"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/male"/>
                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/female"/>
                    <RadioButton
                        android:id="@+id/radioOther"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/other"/>
                </RadioGroup>

            </LinearLayout>


            <Button
                android:id="@+id/generateOtp"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/generate_otp"
                android:padding="18dp"
                android:backgroundTint="#311B92"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginBottom="25dp" />

            <TextView
                android:id="@+id/alreadyHaveAnAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black"
                android:padding="16dp"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>