<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_userManual">

    <fragment
        android:id="@+id/nav_userManual"
        android:name="com.example.streetlight.ui.UserManual"
        android:label="@string/user_manual"
        tools:layout="@layout/fragment_user_manual" />

    <fragment
        android:id="@+id/nav_complaint"
        android:name="com.example.streetlight.ui.MapsFragment"
        android:label="@string/register_complaint"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_rewards"
        android:name="com.example.streetlight.ui.MyRewardsFragment"
        android:label="@string/my_rewards"
        tools:layout="@layout/fragment_my_rewards" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.streetlight.ui.Settings"
        android:label="Settings"
        tools:layout="@layout/fragment_settings"/>

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.streetlight.ui.LogOut"
        android:label="Log Out"
        tools:layout="@layout/fragment_log_out"/>

</navigation>