<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".authentication.OtpSignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/str">

        <TextView
            android:id="@+id/blackBlock"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:background="@drawable/str"
            android:text="@string/appname_hindi"
            android:textColor="@color/white"
            android:textSize="80sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:orientation="vertical"
            android:background="@drawable/register_shape">

            <TextView
                android:id="@+id/welcomeBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:padding="16dp"
                android:textSize="40sp"
                />


            <LinearLayout
                android:id="@+id/ll"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_below="@id/welcomeBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nintyOne"
                    android:background="@drawable/edittext_shape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_91"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    app:drawableLeftCompat="@drawable/india"/>

                <EditText
                    android:id="@+id/phoneNumberEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:drawableStart="@drawable/ic_baseline_phone_android_24"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:textAlignment="center"
                    android:background="@drawable/edittext_shape"
                    android:hint="@string/number"/>

            </LinearLayout>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/password"
                android:background="@drawable/edittext_shape"
                android:padding="10dp"
                android:maxLength="8"
                android:maxLines="1"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:layout_below="@id/ll"/>

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:padding="18dp"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/password"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/deep_purple_900"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/goForSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_for_sign_up"
                android:textColor="@color/black"
                android:layout_below="@id/login"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:padding="16dp"/>

        </RelativeLayout>
    </LinearLayout>

</ScrollView>