<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/str"
    tools:context=".authentication.ProcessOtp">

    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/app_name"
        android:textSize="60sp"
        android:textColor="@color/white"
        android:background="@drawable/str"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:background="@drawable/register_shape">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/please_enter_the_otp_sent_to_your_number"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:layout_marginTop="60dp"/>



        <com.chaos.view.PinView
            android:id="@+id/enteredOtp"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:inputType="number"
            android:itemBackground="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cursorWidth="2dp"
            app:itemCount="6"
            app:itemHeight="48dp"
            app:itemRadius="4dp"
            app:itemSpacing="10dp"
            app:itemWidth="48dp"
            app:lineColor="@color/black"
            app:lineWidth="2dp"
            app:viewType="rectangle"
            android:layout_centerInParent="true" />


        <Button
            android:id="@+id/verifyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:backgroundTint="#311B92"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="18dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"/>
    </RelativeLayout>


</LinearLayout>